Ingress/v1/simple-ingress-v1-tls.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
spec:
  ingressClassName: kong
  tls:
  - hosts:
      - tls.konghq.com
    secretName: tls-secret
  rules:
  - host: tls.konghq.com
    http:
      paths:
      - path: /foo
        pathType: Exact                                #/foo only, equal to /foo$
        #pathType: Prefix                              #/foo and foo/xyz but NOT /foo123  
        #pathType: ImplementationSpecific              # same as definding /foo - /foo*
        backend: 
          service: 
            name: echo
            port:
              number: 80
  defaultBackend:
    service:
        name: httpbin
        port: 
            number: 80
