Ingress/v1/simple-ingress-v1-with-host.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: ingress-controllers.konghq.com/kong
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  rules:
  - host: "test.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/barfoo"
        backend:
          service:
            name: echo
            port:
              number: 80
  - host: "test.foo.com"
    http:
      paths:
      - pathType: Prefix
        path: "/foobar"
        backend:
          service:
            name: echo
            port:
              number: 80
